# chorale

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
chorale/: __init__.py  __main__.py  backends.py  cli.py  config.py  prompt.py  run.py  splice.py  template.py
tests/: test_backends.py  test_config.py  test_splice.py  test_template.py
